--- a/index.html
+++ b/index.html
@@ -3,219 +3,119 @@ layout: article
 title: A LOOOSER'S ブログ
 comment: false
 ---
-<font size=5 color=#b6b196><strong>I lost myself into the night</font></strong>
+<font size=5 color=#b6b196><strong>I see through the lie</font></strong>
 <p></p>
-<font size=5><strong>在黑夜之中迷失自己</font></strong>
+<font size=5><strong>逃离熙熙攘攘</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>And I flew higher</font></strong>
+<font size=5 color=#b6b196><strong>No more disguise</font></strong>
 <p></p>
-<font size=5><strong>于是我飞得更高</font></strong>
+<font size=5><strong>去掉所有伪装</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Than I had ever</font></strong>
+<font size=5 color=#b6b196><strong>The scenery's crashing down</font></strong>
 <p></p>
-<font size=5><strong>比曾经任何一次都高</font></strong>
+<font size=5><strong>往事如烟消亡</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>But I still felt small</font></strong>
+<font size=5 color=#b6b196><strong>To let all the truth be found</font></strong>
 <p></p>
-<font size=5><strong>但我依然感觉我微不足道</font></strong>
+<font size=5><strong>浮出一切真相</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>I clipped my wings and fell from flight</font></strong>
+<font size=5 color=#b6b196><strong>Didn't belong, had to move on?</font></strong>
 <p></p>
-<font size=5><strong>我撕裂我的翅膀，从空中坠落</font></strong>
+<font size=5><strong>既无所属 安得无恙？</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>To open water</font></strong>
+<font size=5 color=#b6b196><strong>To somewhere that I could be</font></strong>
 <p></p>
-<font size=5><strong>沉入水中</font></strong>
+<font size=5><strong>既无羁绊 随处闯荡</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>And floated farther</font></strong>
+<font size=5 color=#b6b196><strong>Open my eyes and see</font></strong>
 <p></p>
-<font size=5><strong>随波逐流</font></strong>
+<font size=5><strong>睁开慧眼</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Away from myself</font></strong>
+<font size=5 color=#b6b196><strong>All of the beauty in front of me</font></strong>
 <p></p>
-<font size=5><strong>远离自我</font></strong>
+<font size=5><strong>可见瑰丽美景</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>And I swam in the wakes of imposters</font></strong>
+<font size=5 color=#b6b196><strong>Giving back all the energy that</font></strong>
 <p></p>
-<font size=5><strong>我在谎言编织的湖中前行</font></strong>
+<font size=5><strong>心无旁骛</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Just to feel what it's like to pretend</font></strong>
+<font size=5 color=#b6b196><strong>I never felt, I never felt before</font></strong>
 <p></p>
-<font size=5><strong>只为体验伪装的感觉</font></strong>
+<font size=5><strong>尽可欣然徜徉</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>There's no dreams in the lakes only monsters</font></strong>
+<font size=5 color=#b6b196><strong>Beyond the lights of society</font></strong>
 <p></p>
-<font size=5><strong>湖中没有美梦，只有魔鬼</font></strong>
+<font size=5><strong>灯红酒绿 逢场作戏</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>And the monsters are my only friends</font></strong>
+<font size=5 color=#b6b196><strong>That were killing me quietly</font></strong>
 <p></p>
-<font size=5><strong>而这些魔鬼是我唯一的朋友</font></strong>
+<font size=5><strong>纯真之心 日渐麻痹</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>They're all that I was</font></strong>
+<font size=5 color=#b6b196><strong>Now I found myself, I found myself a home</font></strong>
 <p></p>
-<font size=5><strong>他们都是我的映像</font></strong>
+<font size=5><strong>如今我已找回自我 心有所向</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>And ever could be</font></strong>
+<font size=5 color=#b6b196><strong>Out on my own</font></strong>
 <p></p>
-<font size=5><strong>而我也可能会成为恶魔.....</font></strong>
+<font size=5><strong>全凭一己之力</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Eyes in the dead still water</font></strong>
+<font size=5 color=#b6b196><strong>My spirit's awake</font></strong>
 <p></p>
-<font size=5><strong>亡魂之眼，仍在流泪</font></strong>
+<font size=5><strong>心灵已醒来</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Tried but it pushed back harder</font></strong>
+<font size=5 color=#b6b196><strong>I don't feel the shame</font></strong>
 <p></p>
-<font size=5><strong>竭尽全力，却适得其反</font></strong>
+<font size=5><strong>人言不可畏</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Cauterized and atrophied</font></strong>
+<font size=5 color=#b6b196><strong>So many people here</font></strong>
 <p></p>
-<font size=5><strong>燃烧殆尽，灵魂将逝</font></strong>
+<font size=5><strong>举世皆浊我独清</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>This is my unbecoming</font></strong>
+<font size=5 color=#b6b196><strong>But somehow they disappear</font></strong>
 <p></p>
-<font size=5><strong>光鲜的外表下藏着丑恶的魔鬼</font></strong>
+<font size=5><strong>众人皆醉我独醒</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Knives in the backs of martyrs</font></strong>
+<font size=5 color=#b6b196><strong>Cause all that I trust</font></strong>
 <p></p>
-<font size=5><strong>刺穿殉道者的利刃</font></strong>
+<font size=5><strong>曾相信的一切</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Lives in the burning fodder</font></strong>
+<font size=5 color=#b6b196><strong>Had crumbled to dust</font></strong>
 <p></p>
-<font size=5><strong>活在烈焰的地狱中</font></strong>
+<font size=5><strong>早已土崩瓦解</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Cauterized and atrophied</font></strong>
+<font size=5 color=#b6b196><strong>But finally I can breathe</font></strong>
 <p></p>
-<font size=5><strong>燃烧殆尽，灵魂将逝</font></strong>
+<font size=5><strong>而放下终得畅然</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>This is my unbecoming</font></strong>
+<font size=5 color=#b6b196><strong>Open my eyes and see</font></strong>
 <p></p>
-<font size=5><strong>光鲜的外表下藏着丑恶的魔鬼</font></strong>
+<font size=5><strong>睁开慧眼</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>You found me drifted out to sea</font></strong>
+<font size=5 color=#b6b196><strong>All of the beauty in front of me</font></strong>
 <p></p>
-<font size=5><strong>你发现漂浮在海上的我</font></strong>
+<font size=5><strong>可见瑰丽美景</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>It's automatic</font></strong>
+<font size=5 color=#b6b196><strong>Giving back all the energy that</font></strong>
 <p></p>
-<font size=5><strong>这必然发生</font></strong>
+<font size=5><strong>心无旁骛</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>It's telepathic</font></strong>
+<font size=5 color=#b6b196><strong>I never felt, I never felt before</font></strong>
 <p></p>
-<font size=5><strong>这是心灵感应</font></strong>
+<font size=5><strong>尽可欣然徜徉</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>You always knew me</font></strong>
+<font size=5 color=#b6b196><strong>Beyond the lights of society</font></strong>
 <p></p>
-<font size=5><strong>你总是那么了解我</font></strong>
+<font size=5><strong>灯红酒绿 逢场作戏</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>And you laugh as I search for a harbor</font></strong>
+<font size=5 color=#b6b196><strong>That were killing me quietly</font></strong>
 <p></p>
-<font size=5><strong>你嘲笑着我寻求港湾</font></strong>
+<font size=5><strong>纯真之心 日渐麻痹</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>As you point where the halo had been</font></strong>
+<font size=5 color=#b6b196><strong>Now I found myself, I found myself a home</font></strong>
 <p></p>
-<font size=5><strong>当你指出光环的轨迹</font></strong>
+<font size=5><strong>如今我已找回自我 心有所向</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>But the light in your eyes has been squandered</font></strong>
+<font size=5 color=#b6b196><strong>Out on my own</font></strong>
 <p></p>
-<font size=5><strong>但你眼中的光芒也黯淡了下来</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>There's no angel in you in the end</font></strong>
-<p></p>
-<font size=5><strong>到最后，你的善意也化作虚无</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>And all that I was</font></strong>
-<p></p>
-<font size=5><strong>我所拥有的一切</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>I left behind me</font></strong>
-<p></p>
-<font size=5><strong>都抛弃在身后</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>Eyes in the dead still water</font></strong>
-<p></p>
-<font size=5><strong>亡魂之眼，仍在流泪</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>Tried but it pushed back harder</font></strong>
-<p></p>
-<font size=5><strong>竭尽全力，却适得其反</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>Cauterized and atrophied</font></strong>
-<p></p>
-<font size=5><strong>燃烧殆尽，灵魂将逝</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>This is my unbecoming</font></strong>
-<p></p>
-<font size=5><strong>光鲜的外表下藏着丑恶的魔鬼</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>Knives in the backs of martyrs</font></strong>
-<p></p>
-<font size=5><strong>刺穿殉道者的利刃</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>Lives in the burning fodder</font></strong>
-<p></p>
-<font size=5><strong>活在烈焰的地狱中</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>Cauterized and atrophied</font></strong>
-<p></p>
-<font size=5><strong>燃烧殆尽，灵魂将逝</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>This is my unbecoming</font></strong>
-<p></p>
-<font size=5><strong>光鲜的外表下藏着丑恶的魔鬼</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>Now I wait</font></strong>
-<p></p>
-<font size=5><strong>我等待着</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>This metamorphosis</font></strong>
-<p></p>
-<font size=5><strong>转变......</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>All that is left is the change</font></strong>
-<p></p>
-<font size=5><strong>把所有希望押在转变上</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>Selfish fate</font></strong>
-<p></p>
-<font size=5><strong>自私的命运啊</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>I think you made me this</font></strong>
-<p></p>
-<font size=5><strong>我认为你让我变成这样的</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>Under the water I wait</font></strong>
-<p></p>
-<font size=5><strong>坠入深海，我仍在等待</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>Eyes in the dead still water</font></strong>
-<p></p>
-<font size=5><strong>亡魂之眼，仍在流泪</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>Tried but it pushed back harder</font></strong>
-<p></p>
-<font size=5><strong>竭尽全力，却适得其反</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>Cauterized and atrophied</font></strong>
-<p></p>
-<font size=5><strong>燃烧殆尽，灵魂将逝</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>This is my unbecoming</font></strong>
-<p></p>
-<font size=5><strong>光鲜的外表下藏着丑恶的魔鬼</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>Knives in the backs of martyrs</font></strong>
-<p></p>
-<font size=5><strong>刺穿殉道者的利刃</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>Lives in the burning fodder</font></strong>
-<p></p>
-<font size=5><strong>活在烈焰的地狱中</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>Cauterized and atrophied</font></strong>
-<p></p>
-<font size=5><strong>燃烧殆尽，灵魂将逝</font></strong>
-<p></p>
-<font size=5 color=#b6b196><strong>This is my unbecoming</font></strong>
-<p></p>
-<font size=5><strong>光鲜的外表下藏着丑恶的魔鬼</font></strong>
+<font size=5><strong>全凭一己之力</font></strong>
 <p></p>
