--- a/vbpro.html
+++ b/vbpro.html
@@ -1,8 +1,8 @@
 ---
 layout: articles
-title: Articles - Item (Cover + Excerpt + Read More + Info)
+title: VB.NET 小程序集合
 articles:
-  data_source: site.sample_page
+  data_source: _vbposts
   show_excerpt: true
   show_readmore: true
   show_info: true
