--- a/vbpro.html
+++ b/vbpro.html
@@ -2,7 +2,7 @@
 layout: articles
 title: VB.NET 小程序集合
 articles:
-  data_source: _vbposts
+  data_source: site.vbposts
   show_excerpt: true
   show_readmore: true
   show_info: true
