--- a/vbpro.html
+++ b/vbpro.html
@@ -3,6 +3,7 @@ layout: articles
 title: VB.NET 小程序集合
 articles:
   data_source: site.vbposts
+  show_cover: false
   show_excerpt: true
   show_readmore: true
   show_info: true
