--- a/vbpro.html
+++ b/vbpro.html
@@ -2,7 +2,7 @@
 layout: articles
 title: VB.NET 小程序集合
 articles:
-  data_source: site.vbposts
+  data_source: site._vbposts
   show_cover: false
   show_excerpt: true
   show_readmore: true
