--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: article
-title: A LOOOSER'S ブログ
+title: A LOOOSER'S Blog
 comment: false
 ---
 <font size=5 color=#b6b196><strong>I see through the lie</font></strong>
