--- a/index.html
+++ b/index.html
@@ -3,119 +3,251 @@ layout: article
 title: A LOOOSER'S Blog
 comment: false
 ---
-<font size=5 color=#b6b196><strong>I see through the lie</font></strong>
+<font size=5 color=#b6b196><strong>I said this time next year</font></strong>
 <p></p>
-<font size=5><strong>逃离熙熙攘攘</font></strong>
+<font size=5><strong>我说过明年今日</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>No more disguise</font></strong>
+<font size=5 color=#b6b196><strong>I’m gonna be the one to do</font></strong>
 <p></p>
-<font size=5><strong>去掉所有伪装</font></strong>
+<font size=5><strong>我将改变自己并做到</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>The scenery's crashing down</font></strong>
+<font size=5 color=#b6b196><strong>Everything and more you said I couldn’t do</font></strong>
 <p></p>
-<font size=5><strong>往事如烟消亡</font></strong>
+<font size=5><strong>所有你说和没说我做不到的事情</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>To let all the truth be found</font></strong>
+<font size=5 color=#b6b196><strong>This one is for you</font></strong>
 <p></p>
-<font size=5><strong>浮出一切真相</font></strong>
+<font size=5><strong>听好，这是对你说的</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Didn't belong, had to move on?</font></strong>
+<font size=5 color=#b6b196><strong>This time next year</font></strong>
 <p></p>
-<font size=5><strong>既无所属 安得无恙？</font></strong>
+<font size=5><strong>明年今日</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>To somewhere that I could be</font></strong>
+<font size=5 color=#b6b196><strong>I’m gonna be stronger</font></strong>
 <p></p>
-<font size=5><strong>既无羁绊 随处闯荡</font></strong>
+<font size=5><strong>我要变更强壮一点</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Open my eyes and see</font></strong>
+<font size=5 color=#b6b196><strong>A little bit taller</font></strong>
 <p></p>
-<font size=5><strong>睁开慧眼</font></strong>
+<font size=5><strong>更高挑一点</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>All of the beauty in front of me</font></strong>
+<font size=5 color=#b6b196><strong>Top is my only view</font></strong>
 <p></p>
-<font size=5><strong>可见瑰丽美景</font></strong>
+<font size=5><strong>眼光放的最高</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Giving back all the energy that</font></strong>
+<font size=5 color=#b6b196><strong>I'm kicking in the door now.</font></strong>
 <p></p>
-<font size=5><strong>心无旁骛</font></strong>
+<font size=5><strong>我适才初窥堂奥</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>I never felt, I never felt before</font></strong>
+<font size=5 color=#b6b196><strong>Better get out of my way</font></strong>
 <p></p>
-<font size=5><strong>尽可欣然徜徉</font></strong>
+<font size=5><strong>最好不要挡我道</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Beyond the lights of society</font></strong>
+<font size=5 color=#b6b196><strong>Never really saw me coming</font></strong>
 <p></p>
-<font size=5><strong>灯红酒绿 逢场作戏</font></strong>
+<font size=5><strong>没正经看到我赶超</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>That were killing me quietly</font></strong>
+<font size=5 color=#b6b196><strong>You left with nothing to say</font></strong>
 <p></p>
-<font size=5><strong>纯真之心 日渐麻痹</font></strong>
+<font size=5><strong>你只剩下无话可说了吧</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Now I found myself, I found myself a home</font></strong>
+<font size=5 color=#b6b196><strong>This is for everybody</font></strong>
 <p></p>
-<font size=5><strong>如今我已找回自我 心有所向</font></strong>
+<font size=5><strong>这是“献”给所有</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Out on my own</font></strong>
+<font size=5 color=#b6b196><strong>Who always put me down</font></strong>
 <p></p>
-<font size=5><strong>全凭一己之力</font></strong>
+<font size=5><strong>那些对我冷眼相向的人</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>My spirit's awake</font></strong>
+<font size=5 color=#b6b196><strong>I hope you open up your eyes</font></strong>
 <p></p>
-<font size=5><strong>心灵已醒来</font></strong>
+<font size=5><strong>我要你鼓睛暴眼</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>I don't feel the shame</font></strong>
+<font size=5 color=#b6b196><strong>And take a good look at me now</font></strong>
 <p></p>
-<font size=5><strong>人言不可畏</font></strong>
+<font size=5><strong>好好看看现在的我</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>So many people here</font></strong>
+<font size=5 color=#b6b196><strong>Take a good look at me now</font></strong>
 <p></p>
-<font size=5><strong>举世皆浊我独清</font></strong>
+<font size=5><strong>好好看看现在的我</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>But somehow they disappear</font></strong>
+<font size=5 color=#b6b196><strong>Take a good look at me now</font></strong>
 <p></p>
-<font size=5><strong>众人皆醉我独醒</font></strong>
+<font size=5><strong>好好看看现在的我</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Cause all that I trust</font></strong>
+<font size=5 color=#b6b196><strong>Cause this time next year</font></strong>
 <p></p>
-<font size=5><strong>曾相信的一切</font></strong>
+<font size=5><strong>因为明年这个时候，哼哼</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Had crumbled to dust</font></strong>
+<font size=5 color=#b6b196><strong>I’m gonna walk down these halls</font></strong>
 <p></p>
-<font size=5><strong>早已土崩瓦解</font></strong>
+<font size=5><strong>我将穿过堂皇厅堂</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>But finally I can breathe</font></strong>
+<font size=5 color=#b6b196><strong>And show my face for the world to see</font></strong>
 <p></p>
-<font size=5><strong>而放下终得畅然</font></strong>
+<font size=5><strong>让全世界认识我的模样</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Open my eyes and see</font></strong>
+<font size=5 color=#b6b196><strong>Gonna see me</font></strong>
 <p></p>
-<font size=5><strong>睁开慧眼</font></strong>
+<font size=5><strong>见到我</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>All of the beauty in front of me</font></strong>
+<font size=5 color=#b6b196><strong>And I’m gonna call every girl that turned me down</font></strong>
 <p></p>
-<font size=5><strong>可见瑰丽美景</font></strong>
+<font size=5><strong>我要打给每个拒绝我的女孩</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Giving back all the energy that</font></strong>
+<font size=5 color=#b6b196><strong>And tell them now that I’m just too busy</font></strong>
 <p></p>
-<font size=5><strong>心无旁骛</font></strong>
+<font size=5><strong>跟她们炫耀我实在太忙</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>I never felt, I never felt before</font></strong>
+<font size=5 color=#b6b196><strong>Cause I don’t have the time</font></strong>
 <p></p>
-<font size=5><strong>尽可欣然徜徉</font></strong>
+<font size=5><strong>所以才没时间</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Beyond the lights of society</font></strong>
+<font size=5 color=#b6b196><strong>And its funny how my so called friends</font></strong>
 <p></p>
-<font size=5><strong>灯红酒绿 逢场作戏</font></strong>
+<font size=5><strong>滑稽的是那些所谓的我的朋友</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>That were killing me quietly</font></strong>
+<font size=5 color=#b6b196><strong>Who always left me alone</font></strong>
 <p></p>
-<font size=5><strong>纯真之心 日渐麻痹</font></strong>
+<font size=5><strong>经常留下我茕茕孑立</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Now I found myself, I found myself a home</font></strong>
+<font size=5 color=#b6b196><strong>Suddenly running into me</font></strong>
 <p></p>
-<font size=5><strong>如今我已找回自我 心有所向</font></strong>
+<font size=5><strong>现在一瞬间蜂拥而至</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>Out on my own</font></strong>
+<font size=5 color=#b6b196><strong>And blowing up my phone</font></strong>
 <p></p>
-<font size=5><strong>全凭一己之力</font></strong>
+<font size=5><strong>还打爆了我的电话</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>I'm kicking in the door now.</font></strong>
+<p></p>
+<font size=5><strong>我适才初窥堂奥</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Better get out of my way</font></strong>
+<p></p>
+<font size=5><strong>最好不要挡我道</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Never really saw me coming</font></strong>
+<p></p>
+<font size=5><strong>没正经看到我赶超</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>You left with nothing to say</font></strong>
+<p></p>
+<font size=5><strong>你只剩下无话可说了吧</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>This is for everybody</font></strong>
+<p></p>
+<font size=5><strong>这是“献”给所有</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Who always put me down</font></strong>
+<p></p>
+<font size=5><strong>那些对我冷眼相向的人</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>I hope you open up your eyes</font></strong>
+<p></p>
+<font size=5><strong>我要你鼓睛暴眼</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>And take a good look at me now</font></strong>
+<p></p>
+<font size=5><strong>好好看看现在的我</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Take a good look at me now</font></strong>
+<p></p>
+<font size=5><strong>好好看看现在的我</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Take a good look at me now</font></strong>
+<p></p>
+<font size=5><strong>好好看看现在的我</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Oh baby</font></strong>
+<p></p>
+<font size=5><strong>嘿 北鼻</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Take a good look at me now</font></strong>
+<p></p>
+<font size=5><strong>好好看看现在的我</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Take a good look at me now</font></strong>
+<p></p>
+<font size=5><strong>好好看看现在的我</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Take a good look at me now</font></strong>
+<p></p>
+<font size=5><strong>好好看看现在的我</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Oh look at me now</font></strong>
+<p></p>
+<font size=5><strong>啊！看现在的我！</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Oh this one is dedicated</font></strong>
+<p></p>
+<font size=5><strong>这首歌专门献给</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>To all of the people</font></strong>
+<p></p>
+<font size=5><strong>所有那些</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Who said I would be nothing</font></strong>
+<p></p>
+<font size=5><strong>曾经说我一文不名的人</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Just look at me now</font></strong>
+<p></p>
+<font size=5><strong>看着我</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Look at me now</font></strong>
+<p></p>
+<font size=5><strong>看着我</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Look at me now</font></strong>
+<p></p>
+<font size=5><strong>看着我</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>I'm kicking in the door now.</font></strong>
+<p></p>
+<font size=5><strong>我适才初窥堂奥</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Better get out of my way</font></strong>
+<p></p>
+<font size=5><strong>最好不要挡我道</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Never really saw me coming</font></strong>
+<p></p>
+<font size=5><strong>没正经看到我赶超</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>You left with nothing to say</font></strong>
+<p></p>
+<font size=5><strong>你默不作声地离开</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>This is for everybody</font></strong>
+<p></p>
+<font size=5><strong>这是“献”给所有</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Who always put me down</font></strong>
+<p></p>
+<font size=5><strong>那些对我冷眼相向的人</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>I hope you open up your eyes</font></strong>
+<p></p>
+<font size=5><strong>我要你鼓睛暴眼</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>And take a good look at me now</font></strong>
+<p></p>
+<font size=5><strong>好好看看现在的我</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Take a good look at me now</font></strong>
+<p></p>
+<font size=5><strong>好好看看现在的我</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Take a good look at me now</font></strong>
+<p></p>
+<font size=5><strong>好好看看现在的我</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Take a good look at me now</font></strong>
+<p></p>
+<font size=5><strong>好好看看现在的我</font></strong>
+<p></p>
+<font size=5 color=#b6b196><strong>Take a good look at me now</font></strong>
+<p></p>
+<font size=5><strong>好好看看现在的我</font></strong>
 <p></p>
