--- a/QQMusicSearch.html
+++ b/QQMusicSearch.html
@@ -2,9 +2,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>NetEasee Song - By WYX</title>
+    <title>MicroSearher On QQMusic - By WYX</title>
     <meta http-equiv="Access-Control-Allow-Origin" content="*" />
-    <meta </head>
+    <meta> 
+</head>
     <style type="text/css">
         body,
         html {
@@ -155,8 +156,8 @@
         }
 
         #mybutton.searchbtn {
-            width: 65px;
-            height: 65px;
+            width: 5%;
+            height: 100%;
             background: url('https://s1.ax1x.com/2020/03/16/8GT8KA.png');
             background-size: 30px 30px;
             background-repeat: no-repeat;
@@ -194,7 +195,7 @@
         <div>
             <h2 style="text-align: center; margin-top: 40px; margin-bottom: 30px;">Search some songs on QQMusic</h2>
         </div>
-        <div style="width: 100%;">
+        <div style="width: 100%;height: 65px;">
             <input class="mytextarea" placeholder="Type Something" id="searchBox">
             <button id="mybutton" type="button" class="searchbtn" style="display: inline;"
                 onclick="onSearchBtnClick()"></button>
